--- a/project1/assets/css/style.css
+++ b/project1/assets/css/style.css
@@ -5,36 +5,32 @@ body{
 
 }
 .container-fluid{
-	width:95%;
+	width:100%;
 	height:100%;
-	backgroundcolor:rgb(96, 96, 248)!important;
 	margin:auto;
-	
-	
 }
 
 
-#video{
-	
-	height:400px;
-	margin:0;
-}
 
 .inputField {
 
-	
 	height:400px;
 	padding:1%;
 	background-image: url(inputimg.jpg);
 	background-size: 100%;
 }
 .card{
-	margin-left:17%;
-	margin-top:2px;
+	margin-left19%;
+	margin: 2px auto;
 }
+
 .col-sm-4{
-	border: solid black 1px;
+	border: solid  rgb(239, 239, 240) 8px;
+	border-right: solid  rgb(239, 239, 240) 20px;
+	border-left: solid rgb(239, 239, 240) 20px;
 	text-align: center;
+	
+	
 }
 
 #dog1 {
@@ -93,8 +89,12 @@ body{
 	height:600px;
 	width:100%;
 	text-align:center;
-	border:solid 2px black;
+	
+}
 
+#map {
+	height:40%;
+	width:99%;
 }
 
 
