--- a/project1/assets/css/style.css
+++ b/project1/assets/css/style.css
@@ -5,7 +5,7 @@ body{
 
 }
 .container-fluid{
-	width:95%;
+	width:99%;
 	height:100%;
 	margin:auto;
 }
@@ -20,22 +20,23 @@ body{
 
 	height:400px;
 	padding:1%;
-	background-image: url(inputimg.jpg);
+	background-image: url(../images/inputimg.jpg);
 	background-size: 100%;
+	text-align: center;
 }
 .card{
-	margin-left19%;
+	margin-left:19%;
 	margin: 2px auto;
 }
 
-.col-sm-4{
+/* .col-sm-4{
 	border: solid  rgb(239, 239, 240) 8px;
 	border-right: solid  rgb(239, 239, 240) 20px;
 	border-left: solid rgb(239, 239, 240) 20px;
 	text-align: center;
 	
 	
-}
+}  
 
 .dogReturn{
 
@@ -43,13 +44,13 @@ body{
 	background-image: url(inputimg.jpg);
 	background-size: 100%;
 
-}
+} */
 
 #jumbotron1{
 	margin-top:10px;
 	margin-bottom:15px;
 	text-align:center;
-	background-image: url("jumbotron.jpeg");
+	background-image: url(../images/jumbotron.jpeg);
 	background-size:100%;
 	background-position:5%;
 	opacity: .95;
@@ -60,13 +61,6 @@ body{
 }
 
 
-#jumbotron2{
-	height:600px;
-	width:100%;
-	text-align:center;
-	
-}
-
 #map {
 	height:400px;
 	width:100%;
@@ -75,6 +69,12 @@ body{
 	size:100%;
 }
 
+#favoritesBtn {
+	margin-right:5px;
+}
 
+#submitBtn {
+	margin-left:5px;
+}
 
 
