--- a/project1/assets/css/style.css
+++ b/project1/assets/css/style.css
@@ -4,7 +4,7 @@
 }
 body{
 	font-family: 'Ubuntu', sans-serif;
-	background-image: url("../images/subtle_white_feathers.zip");
+	background-image: url("../images/");
 	max-width:100%;
 }
 .container-fluid{
